--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
-node_modules
+# Mac OS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Node dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Build files
+/build
+/dist
+/.next
+/out
+
+# Testing
+/coverage
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Misc
+.cache/
+.project
+.classpath
+.settings/
